--- a/index.html
+++ b/index.html
@@ -122,20 +122,21 @@
 
     <div class="potfolio-main">
       <div class="grid">
-        <a href=""><img src="img/outdoor adventure green 1.svg" alt="" /></a>
-        <a href=""><img src="img/edasigit.JPG" alt="" /></a>
-        <a href=""
+        <a href="https://fariha5128.github.io/Bootstrap-Travel-Website/
+        "><img src="img/outdoor adventure green 1.svg" alt="" /></a>
+        <a href="https://fariha5128.github.io/edasi-bootstrap-project-responsive/"><img src="img/edasigit.JPG" alt="" /></a>
+        <a href="https://www.behance.net/gallery/122230427/A-Web-Developers-Portfolio"
           ><img src="img/behance portfolio project view.svg" alt=""
         /></a>
-        <a href=""
+        <a href="https://www.behance.net/gallery/138757675/Pricing-Table-design-for-a-website?"
           ><img src="img/pricing atble git and behance.svg" alt=""
         /></a>
-        <a href=""
+        <a href="https://www.behance.net/gallery/122179919/Personal-Blog-Website-Design"
           ><img
             src="img/Bloging Website design about Earth Science 1.svg"
             alt=""
         /></a>
-        <a href=""
+        <a href="https://www.behance.net/gallery/122183051/Bangla-News-Website"
           ><img src="img/behance newspaper project view.svg" alt=""
         /></a>
       </div>
@@ -215,7 +216,7 @@
       <div class="form-left">
         <div class="form-inner flex">
           <h2 class="sub-heading">GET IN TOUCH</h2>
-          <form class="showcase-form">
+          <form class="showcase-form" action="https://formsubmit.co/fariha.islam4951@gmail.com" method="POST">
             <div class="form-control">
               <label for="namse">Name</label>
               <input type="text" name="name" placeholder="your Name" required />
