--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 
       gtag("config", "G-FV6J38G32H");
     </script>
+    
+    <!-- ===== Google Adsense======== -->
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6071188322823927"
+     crossorigin="anonymous">
+    
+    </script>
+
+
   </head>
   <body>
     <!-- header section starts      -->
@@ -103,16 +112,16 @@
         <div class="font-right">
           <ul class="flex">
             <li>
-              <a href="behance.net/farihameem">behance.net/farihameem</a
+              <a href="https://www.behance.net/farihameem">behance.net/farihameem</a
               ><img src="icons/Vectorbehance.svg" alt="behance" />
             </li>
             <li>
-              <a href="github.com/Fariha5128Fariha5128">
+              <a href="https://github.com/Fariha5128">
                 github.com/Fariha5128Fariha5128</a
               ><img src="icons/bytesize_github.svg" alt="behance" />
             </li>
             <li>
-              <a href="farihameem.ml">farihameem.ml</a>
+              <a href="https://farihameem.ml">farihameem.ml</a>
               <img src="icons/Vectorweb.svg" alt="behance" />
             </li>
           </ul>
@@ -254,7 +263,7 @@
             ><img src="icons/clarity_email-solid.svg" alt="behance" />
           </li>
           <li>
-            <a href="behance.net/farihameem">behance.net/farihameem</a
+            <a href="https://www.behance.net/farihameem">behance.net/farihameem</a
             ><img src="icons/Vectorbluebehance.svg" alt="behance" />
           </li>
           <li>
